--- a/app/views/user_games/index.html.erb
+++ b/app/views/user_games/index.html.erb
@@ -95,6 +95,19 @@
       <button class="key" data-key="del" class="wide-button" onclick="removeLast()">&larr;</button>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+    
+<h3 class="hidden">Balls<h3>
 
 </body>
 
