fixed height mobile

--- a/app/views/user_games/index.html.erb
+++ b/app/views/user_games/index.html.erb
@@ -2647,9 +2647,9 @@ function setListener() {
       elements[i].addEventListener('click', myFunction);
   }
 }
-addEventListener("load", function() {
-    window.scrollTo(1, 0);
-}, false);
+// addEventListener("load", function() {
+//     window.scrollTo(1, 0);
+// }, false);
 
 function changeKeyboard(arr) {
   var buttons = document.getElementsByClassName("key");
@@ -2750,5 +2750,5 @@ function removeLast(){
   click--
 }
 setListener();
-addEventListener();
+
 </script>
