--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@
     box-sizing: border-box;
     min-height: 0;
     min-width: 0;
-    max-height: 70vh;
+    
     
   }
   .grid-item {
@@ -34,13 +34,16 @@
     text-align: center;
     justify-content: center;
     border: 1px solid #3a3a3b;
-    /* padding: 10px; */
     font-size: 30px;
     overflow: hidden;
     min-width: 0;
     height: 20px;
     width: 20px;
+  
    
+  }
+  .key {
+    max-height: 30px;
   }
   .word-one, .word-two, .word-three, .word-four, .word-five, .word-six{
     display: grid;
@@ -55,6 +58,7 @@
  }
  body {
    height: 100vh;
+   
  }
 
  .grid-container {
