fixed grid size

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,8 @@
     box-sizing: border-box;
     min-height: 0;
     min-width: 0;
+    grid-gap: -1px;
+    
     
     
   }
@@ -42,8 +44,16 @@
   
    
   }
+  .del_sub_key {
+    background-color: rgb(203, 203, 203) !important ;
+    color: black !important;
+  }
   .key {
-    max-height: 30px;
+    max-height: 55px;
+  }
+  .title {
+    margin: 0;
+    padding: 0;
   }
   .word-one, .word-two, .word-three, .word-four, .word-five, .word-six{
     display: grid;
@@ -93,9 +103,10 @@
   text-align: center;
   justify-content: center;
   grid-template-columns: repeat(5,1fr);
-  column-gap: 10px;
+  column-gap: 5px;
+  row-gap: 5px;
   margin: 4px;
-  padding: 5px;
+
 }
 .found {
   background-color: #b59f3b !important;
