--- a/app/views/user_games/index.html.erb
+++ b/app/views/user_games/index.html.erb
@@ -84,7 +84,7 @@
       <div class="spacer-half"></div>
     </div>
     <div class="keyboard-row">
-      <button class="key" data-key="enter" onclick="submit()"class="wide-button">Enter</button>
+      <button class="key del_sub_key" data-key="enter" onclick="submit()"class="wide-button">Enter</button>
       <button class="key" id="Z" data-key="Z">Z</button>
       <button class="key" id="X" data-key="X">X</button>
       <button class="key" id="C" data-key="C">C</button>
@@ -92,7 +92,7 @@
       <button class="key" id="B" data-key="B">B</button>
       <button class="key" id="N" data-key="N">N</button>
       <button class="key" id="M" data-key="M">M</button>
-      <button class="key" data-key="del" class="wide-button" onclick="removeLast()">&larr;</button>
+      <button class="key del_sub_key" data-key="del" class="wide-button" onclick="removeLast()">&larr;</button>
     </div>
   </div>
   <br>
