--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,22 @@
-<h1>Index Users</h1>
-<% @users.each do |user| %>
-  <h3><a href="/users/<%=user.id%>"><%=user.name.capitalize%></a></h3>
-<%end%>
+<h1 class="white" >Leader Board</h1>
+<div class="users-index">
+<table class="leader-board">
+  <tr>
+    <th></th>
+    <th></th>
+
+  </tr>
+
+  <tr>
+   
+    <% users_total_score(@users).each do |k,v|  %> 
+      <td class="key-value-pair"><%= "#{k} #{v}" %></td>
+    <%end%>
+    
+  
+   
+  
+  </tr>
+</div>
+</table>
+ 
