--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,7 +12,7 @@
  <ul class="nav">
     <% if current_user %>
       <li><a href= <%= "/users/#{current_user.id}"%>> Profile </a></li>
-      <li><a href="/users/all">Users</a></li>
+      <li><a href="/users/all">LeaderBoard</a></li>
       
       <li><a href="/" >Play Game!</a></li>
       <li><a href="/logout">Logout</a></li>
