--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,8 @@
 <div class="spacer">
+<h1 class="white">Sign-up</h1>
+<br>
+<br>
+<br>
   <div class="users-index-container">
     <div class="users-index">
       <%= form_with(model: @user, local: true) do |f| %>
@@ -8,7 +12,7 @@
       <%= f.email_field :email, class: 'form-control' %><br>
       <%= f.label :password %><br>
       <%= f.password_field :password, class: 'form-control' %><br>
-      <%= f.label :password_confirmation, "Confirmation" %><br>
+      <%= f.label :password_confirmation, "Password Confirmation" %><br>
       <%= f.password_field :password_confirmation, class: 'form-control' %><br><br>
       <%= f.submit "Create my account", class: "center btn btn-primary" %>
       <% end %>
