--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,7 @@
 <body>
  <ul class="nav">
     <% if current_user %>
-      <li><a href="/" >Play Game!</a></li>
+      <li><a href="/game" >Play Game!</a></li>
       <li><a href= <%= "/users/#{current_user.id}"%>> Profile </a></li>
       <li><a href="/users/all">LeaderBoard</a></li>
       
