--- a/app/views/user_games/index.html.erb
+++ b/app/views/user_games/index.html.erb
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WORDS</title>
-  <h1 class="title"><%= current_user.name.capitalize %>'s Wordle</h1>
+  <h2 class="name-title title"><%= current_user.name.capitalize %>'s Wordle</h2>
 
 </head>
 
