--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,3 +1,20 @@
 
 <h3>Dereks Words</h3>
-<h4 class="white">My wordle clone! with a leaderboard!</h4>
+<div class="border-colors">
+  <p>
+    <h4 class="white-words">My wordle clone! with a leaderboard!</h4>
+  </p>
+  <div class="signup-btn">
+  <p class="white"> Havent made an account yet? </p>
+    <a href="/users">Sign up</a>
+  </div>
+  <div class="login-btn">
+  <p class="white" > If you have go ahead and </p>
+    <a href="/login">Log In</a>
+  </div>
+  <div class="home-p">
+  <p class="white">Do you enjoy Wordle? the puzzle game taking Twitter by storm? The premise of Wordle is simple, you have to guess a five-letter word in six tries. Here is my version made with Ruby on Rails, PostgreSQL, HTML/CSS and Javascript. </p>
+  </div>
+  <a href="https://github.com/derekpyoung/dereks_words">GitHub</a>
+  <a href="https://www.linkedin.com/in/derekpyoung12/">LinkedIn</a>
+</div>
