--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,6 +77,29 @@
     color: rgb(136, 133, 133) !important;
     max-width: 30px;
   }
+  .border-colors {
+    margin-top: 50px;
+    width: 92vw;
+    max-width: 90%;
+    border: 10px solid;
+    padding: 10px;
+    position: absolute;
+    height: 60vh;
+    padding-block-start: 10px;
+    border-image-source: linear-gradient(45deg, #538d4e, #3a3a3b, #538d4e );
+    border-image-slice: 10 ;
+    transition: .5s;
+  
+   }
+   .border-colors:hover {
+    border: 10px solid;
+    padding: 10px;
+    height: 60vh;
+    padding-block-start: 10px;
+    border-image-source: linear-gradient(45deg, #3a3a3b, #538d4e, #3a3a3b);
+    border-image-slice: 10;
+    transition: .5s;
+   }
  
  
   
@@ -122,11 +145,10 @@
  }
  .border-colors {
   margin-top: 50px;
-  width: 92vw;
-  max-width: 90%;
+  
   border: 10px solid;
   padding: 10px;
-  position: absolute;
+
   height: 60vh;
   padding-block-start: 10px;
   border-image-source: linear-gradient(45deg, #538d4e, #3a3a3b, #538d4e );
