--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="login-btn">
   <p class="white" > If you have go ahead and </p>
-    <a href="/login">Log In</a>
+    <a href="/login">Login</a>
   </div>
   <div class="home-p">
   <p class="white">Do you enjoy Wordle? the puzzle game taking Twitter by storm? The premise of Wordle is simple, you have to guess a five-letter word in six tries. Here is my version made with Ruby on Rails, PostgreSQL, HTML/CSS and Javascript. </p>
