--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -11,6 +11,12 @@
   <div class="login-btn">
   <p class="white" > If you have go ahead and </p>
     <a href="/login">Login</a>
+    <br>
+    <br>
+    <p style="color:white">Dont want to make an account? </p>
+    <br>
+    <p style="color:white">User: example@email.com</p>
+    <p style="color:white">Password: password</p>
   </div>
   <div class="home-p">
   <p class="white">Do you enjoy Wordle? the puzzle game taking Twitter by storm? The premise of Wordle is simple, you have to guess a five-letter word in six tries. Here is my version made with Ruby on Rails, PostgreSQL, HTML/CSS and Javascript. </p>
