--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -19,7 +19,7 @@
     <p style="color:white">Password: password</p>
   </div>
   <div class="home-p">
-  <p class="white">Do you enjoy Wordle? the puzzle game taking Twitter by storm? The premise of Wordle is simple, you have to guess a five-letter word in six tries. Here is my version made with Ruby on Rails, PostgreSQL, HTML/CSS and Javascript. </p>
+  <p class="white">Do you enjoy Wordle? the puzzle game taking Twitter by storm. The premise of Wordle is simple, you have to guess a five-letter word in six tries. Here is my version made with Ruby on Rails, PostgreSQL, HTML/CSS and Javascript. </p>
   </div>
   <a href="https://github.com/derekpyoung/dereks_words">GitHub</a>
   <a href="https://www.linkedin.com/in/derekpyoung12/">LinkedIn</a>
