--- a/app/views/user_games/index.html.erb
+++ b/app/views/user_games/index.html.erb
@@ -104,9 +104,7 @@
   <br>
   <br>
   <br>
-  <br>
-  <br>
-  <br>
+
   
 
 </body>
@@ -2621,7 +2619,7 @@ var game_words = [
 var min = 0;
 var max = 2500;
 var random = Math.floor(Math.random() * (max - min) + min) 
-var word_lower = game_words[random];
+var word_lower = "earth"//game_words[random];
 var word = word_lower.toUpperCase();
 var current_array = []
 var click_arr = []
